Modification pour passer via Blob Vercel
